--- a/force-app/main/default/lwc/recordEditFormUpdate/recordEditFormUpdate.html
+++ b/force-app/main/default/lwc/recordEditFormUpdate/recordEditFormUpdate.html
@@ -1,7 +1,7 @@
 <template>
   <lightning-card title="Record Edit Form (Update)">
     <lightning-record-edit-form
-      record-id="0011700001Ut0BOAAZ"
+      record-id="0013N00001D5qXZQAZ"
       object-api-name={objectApiName}
       onsuccess={handleSuccess}
     >
